--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@ __pycache__/
 __pycache__/*
 task_manager_project/__pycache__/settings.cpython-310.pyc
 task_manager_project/__pycache__/urls.cpython-310.pyc
+.venv
+.env
+__pycache__/
+db.sqlite3
